--- a/store.html
+++ b/store.html
@@ -40,8 +40,8 @@
           even when everything is on fire.
         </p>
         <p class="hero-sub">
-          Digital planners, spooky wallpapers, and other pretty little systems for messy humans.
-          Build your routine without killing your soul.
+          All items below are fulfilled through Printful — you click, they print, and your chaos
+          gets some stylish backup.
         </p>
       </div>
     </section>
@@ -54,50 +54,103 @@
       <div class="drip d3"></div>
     </div>
 
-    <!-- Product grid (you can wire to Printful/Printify later) -->
+    <!-- PRINTFUL ITEMS GRID -->
     <section>
       <div class="section-heading">
         <h2>Featured Chaos Tools</h2>
-        <small>Placeholders for now — we’ll hook these to real products.</small>
+        <small>These link directly to my Printful products.</small>
       </div>
 
       <div class="tarot-grid">
+
+        <!-- ITEM 1 – Gothic Anti-Stupid Tote -->
         <article class="tarot-card">
-          <div class="tarot-label-top">Digital Planner</div>
+          <div class="tarot-label-top">Tote Bag</div>
           <div class="tarot-symbol">✶</div>
-          <h3 class="tarot-title">Goth Witch Life Planner</h3>
+          <h3 class="tarot-title">
+            <a href="https://laurelsorganizedchaos.printful.me/product/gothic-im-not-antisocial-im-anti-stupid-tote-bag"
+               target="_blank" rel="noopener">
+              “I’m Not Antisocial, I’m Anti-Stupid” Gothic Tote
+            </a>
+          </h3>
           <p class="tarot-text">
-            A full digital planner for the emotionally exhausted overachiever: monthly spreads,
-            daily chaos capture, habit & mood tracking, and sarcastic affirmations.
+            For errands, appointments, and school runs where you’re over-stimulated by people and
+            underwhelmed by their intelligence. Cute goth, brutally honest.
           </p>
-          <div class="tarot-meta">Coming soon · PDF / Printable</div>
-          <div class="tarot-label-bottom">Plan the chaos</div>
+          <div class="tarot-meta">Printful · Tote Bag</div>
+          <div class="tarot-label-bottom">Carry the boundary</div>
         </article>
 
+        <!-- ITEM 2 – Gothic Anti-Stupid Apparel -->
         <article class="tarot-card">
-          <div class="tarot-label-top">Wallpapers</div>
-          <div class="tarot-symbol">☾</div>
-          <h3 class="tarot-title">Witchy Phone & Desktop Set</h3>
-          <p class="tarot-text">
-            Black, pink, purple, and blue witchcore wallpapers to make your phone and laptop feel
-            like home for your inner goblin.
-          </p>
-          <div class="tarot-meta">Coming soon · Digital download</div>
-          <div class="tarot-label-bottom">Dress your screens</div>
-        </article>
-
-        <article class="tarot-card">
-          <div class="tarot-label-top">Print-on-Demand</div>
+          <div class="tarot-label-top">Apparel</div>
           <div class="tarot-symbol">🩸</div>
-          <h3 class="tarot-title">“Running on Trauma & Caffeine” Mug</h3>
+          <h3 class="tarot-title">
+            <a href="https://laurelsorganizedchaos.printful.me/product/gothic-im-not-antisocial-im-anti-stupid"
+               target="_blank" rel="noopener">
+              “I’m Not Antisocial, I’m Anti-Stupid” Gothic Apparel
+            </a>
+          </h3>
           <p class="tarot-text">
-            For the mornings when you’re doing your best with questionable sleep and too much
-            backstory. Dark, funny, and painfully accurate.
+            For the days when small talk feels like a personal attack. Let your shirt say what your
+            face already is.
           </p>
-          <div class="tarot-meta">Coming soon · Printful / Printify</div>
-          <div class="tarot-label-bottom">Sip the chaos</div>
+          <div class="tarot-meta">Printful · Tee / Hoodie options</div>
+          <div class="tarot-label-bottom">Wear the attitude</div>
         </article>
+
+        <!-- ITEM 3 – Witchy Mom Chaos Tote -->
+        <article class="tarot-card">
+          <div class="tarot-label-top">Tote Bag</div>
+          <div class="tarot-symbol">☾</div>
+          <h3 class="tarot-title">
+            <a href="https://laurelsorganizedchaos.printful.me/product/witchy-mom-chaos-tote"
+               target="_blank" rel="noopener">
+              Witchy Mom Chaos Tote
+            </a>
+          </h3>
+          <p class="tarot-text">
+            Diapers, snacks, crystals, receipts, and emergency caffeine cash — all in one very
+            witchy, very honest mom bag.
+          </p>
+          <div class="tarot-meta">Printful · Tote Bag</div>
+          <div class="tarot-label-bottom">Haul the chaos</div>
+        </article>
+
+        <!-- ITEM 4 – Trauma & Caffeine Mug -->
+        <article class="tarot-card">
+          <div class="tarot-label-top">Mug</div>
+          <div class="tarot-symbol">♄</div>
+          <h3 class="tarot-title">
+            <a href="https://laurelsorganizedchaos.printful.me/product/running-on-trauma-and-caffeine-gothic-mug-15oz-wrap"
+               target="_blank" rel="noopener">
+              “Running on Trauma &amp; Caffeine” Gothic Mug (15oz Wrap)
+            </a>
+          </h3>
+          <p class="tarot-text">
+            For mornings when your nervous system is tired, your kids are loud, and coffee is the
+            only thing keeping you in this dimension.
+          </p>
+          <div class="tarot-meta">Printful · 15oz Mug</div>
+          <div class="tarot-label-bottom">Sip the spell</div>
+        </article>
+
       </div>
+    </section>
+
+    <!-- Link to full Printful storefront -->
+    <section style="margin-top: 3rem; text-align: center;">
+      <p class="hero-sub">
+        Want to see everything in one place?
+      </p>
+      <p style="margin-top:0.6rem;">
+        <a href="https://laurelsorganizedchaos.printful.me/"
+           target="_blank"
+           rel="noopener"
+           style="padding:0.6rem 1.4rem; border-radius:999px; border:1px solid var(--accent-purple); background:linear-gradient(90deg, rgba(255,62,158,0.18), rgba(187,107,255,0.2)); color:var(--text-main); font-family:'Cormorant Garamond',serif; letter-spacing:0.06em; text-transform:uppercase; font-size:0.95rem;">
+          Open Full Chaos Shop
+        </a>
+      </p>
     </section>
   </main>
 
