--- a/index.html
+++ b/index.html
@@ -95,6 +95,84 @@
 
       <div id="latest-chaos-grid" class="tarot-grid"></div>
     </section>
+
+    <!-- Another blood-drip divider between blog + store -->
+    <div class="divider-blood" aria-hidden="true" style="margin-top: 3.2rem;">
+      <div class="divider-blood-line"></div>
+      <div class="drip d1"></div>
+      <div class="drip d2"></div>
+      <div class="drip d3"></div>
+    </div>
+
+    <!-- Featured store items on home -->
+    <section>
+      <div class="section-heading">
+        <h2>Featured from the Chaos Shop</h2>
+        <small>Witchy gear powered by Printful.</small>
+      </div>
+
+      <div class="tarot-grid">
+        <!-- Use three of your products for the homepage -->
+
+        <!-- ITEM A – Anti-Stupid Apparel -->
+        <article class="tarot-card">
+          <div class="tarot-label-top">Apparel</div>
+          <div class="tarot-symbol">🩸</div>
+          <h3 class="tarot-title">
+            <a href="https://laurelsorganizedchaos.printful.me/product/gothic-im-not-antisocial-im-anti-stupid"
+               target="_blank" rel="noopener">
+              “I’m Not Antisocial, I’m Anti-Stupid” Gothic Apparel
+            </a>
+          </h3>
+          <p class="tarot-text">
+            For days when your social battery died three traumas ago. Let your outfit do the talking.
+          </p>
+          <div class="tarot-meta">Printful · Tee / Hoodie</div>
+          <div class="tarot-label-bottom">Wear the boundary</div>
+        </article>
+
+        <!-- ITEM B – Witchy Mom Chaos Tote -->
+        <article class="tarot-card">
+          <div class="tarot-label-top">Tote Bag</div>
+          <div class="tarot-symbol">☾</div>
+          <h3 class="tarot-title">
+            <a href="https://laurelsorganizedchaos.printful.me/product/witchy-mom-chaos-tote"
+               target="_blank" rel="noopener">
+              Witchy Mom Chaos Tote
+            </a>
+          </h3>
+          <p class="tarot-text">
+            For snacks, diapers, crystals, and that one notebook where you keep rewriting your life plan.
+          </p>
+          <div class="tarot-meta">Printful · Tote Bag</div>
+          <div class="tarot-label-bottom">Haul the chaos</div>
+        </article>
+
+        <!-- ITEM C – Trauma & Caffeine Mug -->
+        <article class="tarot-card">
+          <div class="tarot-label-top">Mug</div>
+          <div class="tarot-symbol">♄</div>
+          <h3 class="tarot-title">
+            <a href="https://laurelsorganizedchaos.printful.me/product/running-on-trauma-and-caffeine-gothic-mug-15oz-wrap"
+               target="_blank" rel="noopener">
+              “Running on Trauma &amp; Caffeine” Gothic Mug
+            </a>
+          </h3>
+          <p class="tarot-text">
+            When coffee is a coping mechanism and a personality trait. Big, goth, and painfully honest.
+          </p>
+          <div class="tarot-meta">Printful · 15oz Mug</div>
+          <div class="tarot-label-bottom">Sip the spell</div>
+        </article>
+      </div>
+
+      <p style="margin-top: 1.8rem; text-align:center;">
+        <a href="store.html"
+           style="padding:0.6rem 1.4rem; border-radius:999px; border:1px solid var(--accent-purple); background:linear-gradient(90deg, rgba(255,62,158,0.18), rgba(187,107,255,0.2)); color:var(--text-main); font-family:'Cormorant Garamond',serif; letter-spacing:0.06em; text-transform:uppercase; font-size:0.95rem;">
+          View Full Chaos Shop
+        </a>
+      </p>
+    </section>
   </main>
 
   <!-- Animated neon witch sigil -->
