--- a/store.html
+++ b/store.html
@@ -63,10 +63,33 @@
 
       <div class="tarot-grid">
 
-        <!-- ITEM 1 – Gothic Anti-Stupid Tote -->
+        <!-- ITEM 1 – Anti-Stupid Gothic Blanket -->
+        <article class="tarot-card">
+          <div class="tarot-label-top">Blanket</div>
+          <div class="tarot-symbol">✶</div>
+          <div class="product-image">
+            <img src="images/antisocialblanket.webp" alt="Gothic blanket that reads 'I'm not antisocial, I'm anti-stupid' with crows, candle, and crystals." />
+          </div>
+          <h3 class="tarot-title">
+            <a href="#"
+               target="_blank" rel="noopener">
+              “I’m Not Antisocial, I’m Anti-Stupid” Gothic Blanket
+            </a>
+          </h3>
+          <p class="tarot-text">
+            Curl up under something that matches your soul: cozy, dark, and done with everyone’s nonsense.
+          </p>
+          <div class="tarot-meta">Printful · Throw Blanket</div>
+          <div class="tarot-label-bottom">Wrap in chaos</div>
+        </article>
+
+        <!-- ITEM 2 – Gothic Anti-Stupid Tote -->
         <article class="tarot-card">
           <div class="tarot-label-top">Tote Bag</div>
           <div class="tarot-symbol">✶</div>
+          <div class="product-image">
+            <img src="images/antisocialtote.webp" alt="Gothic tote bag with crows, candle, and pink text that reads 'I'm not antisocial, I'm anti-stupid'." />
+          </div>
           <h3 class="tarot-title">
             <a href="https://laurelsorganizedchaos.printful.me/product/gothic-im-not-antisocial-im-anti-stupid-tote-bag"
                target="_blank" rel="noopener">
@@ -81,10 +104,14 @@
           <div class="tarot-label-bottom">Carry the boundary</div>
         </article>
 
-        <!-- ITEM 2 – Gothic Anti-Stupid Apparel -->
+        <!-- ITEM 3 – Gothic Anti-Stupid Apparel -->
         <article class="tarot-card">
           <div class="tarot-label-top">Apparel</div>
           <div class="tarot-symbol">🩸</div>
+          <!-- (optional) reuse the tote image or add a separate shirt mockup later -->
+          <div class="product-image">
+            <img src="images/antisocialtote.webp" alt="Gothic design reading 'I'm not antisocial, I'm anti-stupid' with crows and candle." />
+          </div>
           <h3 class="tarot-title">
             <a href="https://laurelsorganizedchaos.printful.me/product/gothic-im-not-antisocial-im-anti-stupid"
                target="_blank" rel="noopener">
@@ -99,10 +126,13 @@
           <div class="tarot-label-bottom">Wear the attitude</div>
         </article>
 
-        <!-- ITEM 3 – Witchy Mom Chaos Tote -->
+        <!-- ITEM 4 – Witchy Mom Chaos Tote -->
         <article class="tarot-card">
           <div class="tarot-label-top">Tote Bag</div>
           <div class="tarot-symbol">☾</div>
+          <div class="product-image">
+            <img src="images/witchmomtote.webp" alt="Tote bag with witchy mom chaos illustration and dark humor wording." />
+          </div>
           <h3 class="tarot-title">
             <a href="https://laurelsorganizedchaos.printful.me/product/witchy-mom-chaos-tote"
                target="_blank" rel="noopener">
@@ -117,10 +147,13 @@
           <div class="tarot-label-bottom">Haul the chaos</div>
         </article>
 
-        <!-- ITEM 4 – Trauma & Caffeine Mug -->
+        <!-- ITEM 5 – Trauma & Caffeine Mug -->
         <article class="tarot-card">
           <div class="tarot-label-top">Mug</div>
           <div class="tarot-symbol">♄</div>
+          <div class="product-image">
+            <img src="images/traumamug.webp" alt="Black gothic mug that says 'Running on Trauma and Caffeine' in white script." />
+          </div>
           <h3 class="tarot-title">
             <a href="https://laurelsorganizedchaos.printful.me/product/running-on-trauma-and-caffeine-gothic-mug-15oz-wrap"
                target="_blank" rel="noopener">
